# Supercell-2023-SWE-Intern-Exercise

./: .clang-format  .gitignore  .vimspector.json  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
documentation/: .buildinfo  .gitignore  CMakeLists.txt  Doxyfile.in  conf.py.in  genindex.html  index.html  index.rst.in  objects.inv  search.html  searchindex.js
documentation/RST/: classDummyUserUpdateObserver.html  classdesign__utils_1_1Observer.html  classdesign__utils_1_1Subject.html  classfriend__network_1_1FileLineIterator.html  classfriend__network_1_1FriendsTaskHandler.html  classfriend__network_1_1ReadAllFileLineIterator.html  classfriend__network_1_1StdoutUserUpdateObserver.html  classfriend__network_1_1UpdateTaskHandler.html  classfriend__network_1_1User.html  classfriend__network_1_1UserMap.html  classfriend__network_1_1Value.html  classio__utils_1_1ThrowingIfstream.html  classio__utils_1_1ThrowingOfstream.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_FileLineIterator.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_TaskHandler.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_User.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_UserUpdateObserver.html  dir__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_Utils.html  file__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_FileLineIterator_FileLineIterator.h.html  file__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_FileLineIterator_ReadAllFileLineIterator.h.html  file__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_TaskHandler_FriendsTaskHandler.h.html  file__home_runner_work_Supercell-2023-SWE-Intern-Exercise_Supercell-2023-SWE-Intern-Exercise_src_User_User.h.html  (+29 more)
(+195 files in other folders)
